@@ -77,6 +77,7 @@
       "66853113+pre-commit-ci[bot]@users.noreply.github.com",
       "49699333+dependabot[bot]@users.noreply.github.com",
       "41898282+github-actions[bot]@users.noreply.github.com",
+      "212256041+pylint-backport[bot]@users.noreply.github.com",
       "212256041+pylint-backport-bot[bot]@users.noreply.github.com"
     ],
     "name": "bot"
