@@ -1,7 +1,7 @@
 github_url = "https://github.com/pylint-dev/astroid"
 
 [version]
-current = "4.0.0"
+current = "4.0.1"
 regex = '''
 ^(?P<major>0|[1-9]\d*)
 \.
